# prediction-markets

./: .gitignore  DATA_ARCHITECTURE.md  LICENSE  MARKET_TAXONOMY.md  PROVENANCE.md  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml
collectors/: __init__.py  backfill_polymarket_resolutions.py  cboe_collector.py  coingecko_collector.py  extract_polymarket_subgraph.py  fred_collector.py  gold_set.yaml  manage.sh  market_scout.py  migrate_polymarket_gap.py  migrate_predictit_to_postgres.py  migrate_to_postgres.py  polymarket_collector.py  predictit_collector.py  weekly_pipeline.py
collectors/kalshi/: __init__.py  candles.py  discovery.py  settled.py  snapshots.py  trades.py
collectors/services/: cboe-collector.service  cboe-collector.timer  coingecko-collector.service  coingecko-collector.timer  data-health-alert.service  data-health-alert.timer  fred-collector.service  fred-collector.timer  kalshi-candles-sync.service  kalshi-candles-sync.timer  kalshi-discovery.service  kalshi-discovery.timer  (+13 more)
data/: __init__.py  registry.py
docs/: TRADING_MECHANICS.md
framework/: __init__.py  calibration_store.py  estimator.py  factories.py  feature.py  observations.py  runner.py  view.py  view_factory.py
research/: CALIBRATION_METHODOLOGY.md  __init__.py  calibration.py  fill_expected_fills.py  fill_simulator.py  generate_training_data.py  virtual_order.py
scripts/: download_kalshi_settled.py  finfeed_backfill.py  finfeed_download.py  retention.py  test_finfeed.py
tests/: conftest.py  test_buckets.py  test_calibration.py  test_cost_model.py  test_data_system.py  test_estimator.py  test_ev_strategy.py  test_factories.py  test_feature.py  test_fill_model.py  test_fill_model_sanity.py  test_flb_strategy.py  test_flow_model.py  test_retire_market_view.py  test_risk.py  test_runner.py  test_strategy.py  test_track_record.py  test_view_factory.py
trading/: __init__.py  backtest.py  buckets.py  cost_model.py  ev_strategy.py  event_rate.py  event_rate_predictor.py  expanding_calibration.py  fill_calibration.py  fill_model.py  fill_predictor.py  fill_rate.py  flb_strategy.py  flow_model.py  kalshi_api_sample.py  kalshi_client.py  market_view.py  replay.py  risk.py  series_edge.py  series_edge_snapshots.py  strategy.py  test_balance_escrow.py  track_record.py  trader.py  view_bootstrap.py
(+27 files in other folders)
